Fixed mobile overflow problems

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -18,6 +18,7 @@ body
 	flex-direction: column
 	height: 100%
 	background-attachment: fixed
+	overflow-wrap: break-word
 	
 
 h1
